@@ -1352,14 +1352,17 @@ separated by a "\-" (e.g. "linux[0\-64,128]", or "lx[15,18,32\-33]").
 Note that the numeric ranges can include one or more leading 
 zeros to indicate the numeric portion has a fixed number of digits 
 (e.g. "linux[0000\-1023]").
+Up to two numeric ranges can be included in the expression
+(e.g. "rack[0\-63]_blade[0\-41]").
+If one or more numeric expressions are included, one of them
+must be at the end of the name (e.g. "unit[0\-31]rack" is invalid),
+but arbitrary names can always be used in a comma separated list.
 .LP
 On BlueGene systems only, the square brackets should contain
 pairs of three digit numbers separated by a "x".
 These numbers indicate the boundaries of a rectangular prism
 (e.g. "bgl[000x144,400x544]").
 See BlueGene documentation for more details. 
-Presently the numeric range must be the last characters in the 
-node name (e.g. "unit[0\-31]rack1" is invalid). 
 The node configuration specified the following information:
 
 .TP
